add frag edit update song.db to 3.8.0